# a-evolve

./: .gitignore  README.md  pyproject.toml
agent_evolve/: types.py
agent_evolve/agents/arc/: basic_agent.py  strands_agent.py
agent_evolve/agents/osworld/: react_solver.py
agent_evolve/algorithms/gepa/: engine.py
agent_evolve/benchmarks/: cl_bench.py
agent_evolve/engine/: base.py  loop.py
agent_evolve/llm/: openai_compatible.py
examples/cl_bench_examples/: evolve_cl_bench.py  run_cl_bench.sh
examples/osworld_examples/: README.md  evolve_osworld.py  run_osworld.sh
seed_workspaces/osworld/skills/application-shortcuts/: SKILL.md
seed_workspaces/osworld/skills/gui-click-over-keyboard/: SKILL.md
seed_workspaces/osworld/skills/gui-navigation/: SKILL.md
seed_workspaces/osworld/skills/screenshot-analysis/: SKILL.md
seed_workspaces/osworld/skills/self-verification/: SKILL.md
seed_workspaces/osworld/skills/web-access-strategies/: SKILL.md
tests/gepa/: test_engine.py  test_loop_stop_and_skip.py  test_manages_own_evaluation.py  test_step_result_stop.py
